<resources
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="MissingTranslation"
    >
    <string name="app_name">UILibrary</string>
    <string name="button_add_calendar">添加至日程表</string>
    <string name="button_add_contact">添加联系人</string>
    <string name="button_book_search">打开图书搜索</string>
    <string name="button_cancel">取消</string>
    <string name="button_custom_product_search">自定义搜索</string>
    <string name="button_dial">拨打电话</string>
    <string name="button_email">发送 E-mail</string>
    <string name="button_get_directions">获取地址</string>
    <string name="button_mms">发送彩信</string>
    <string name="button_ok">确定</string>
    <string name="button_open_browser">打开浏览器</string>
    <string name="button_product_search">打开商品搜索</string>
    <string name="button_search_book_contents">搜索图书内容</string>
    <string name="button_share_by_email">通过 E-mail 分享</string>
    <string name="button_share_by_sms">通过短信分享</string>
    <string name="button_show_map">显示地图</string>
    <string name="button_sms">发送短信</string>
    <string name="button_web_search">网页搜索</string>
    <string name="button_wifi">连接到网络</string>
    <string name="contents_contact">联系人信息</string>
    <string name="contents_email">E-mail 地址</string>
    <string name="contents_location">经纬度</string>
    <string name="contents_phone">电话号码</string>
    <string name="contents_sms">短信号码</string>
    <string name="contents_text">纯文本</string>
    <string name="history_clear_one_history_text">删除</string>
    <string name="history_clear_text">删除历史记录</string>
    <string name="history_email_title">条码扫描器的历史</string>
    <string name="history_empty">空</string>
    <string name="history_empty_detail">没有历史记录</string>
    <string name="history_send">发送历史记录</string>
    <string name="menu_encode_mecard">使用MECARD</string>
    <string name="menu_encode_vcard">使用vCard</string>
    <string name="menu_settings">设置</string>
    <string name="menu_share">创建二维码</string>
    <string name="msg_bulk_mode_scanned">批量扫描模式：条码已扫描并保存</string>
    <string name="msg_camera_framework_bug">很遗憾，Android 相机出现问题。你可能需要重启设备。</string>
    <string name="msg_default_mms_subject">Hi</string>
    <string name="msg_encode_contents_failed">无法生成条码。</string>
    <string name="msg_error">错误</string>
    <string name="msg_google_books">Google</string>
    <string name="msg_google_product">Google</string>
    <string name="msg_intent_failed">抱歉，无法打开应用。条码内容可能无效。</string>
    <string name="msg_invalid_value">值无效</string>
    <string name="msg_redirect">重定向</string>
    <string name="msg_sure">确定吗？</string>
    <string name="msg_unmount_usb">抱歉，无法访问 SD 卡。</string>
    <string name="preferences_actions_title">扫描成功</string>
    <string name="preferences_auto_focus_title">自动对焦</string>
    <string name="preferences_auto_open_web_title">自动打开网页</string>
    <string name="preferences_bulk_mode_summary">连续扫描并保存多个条码</string>
    <string name="preferences_bulk_mode_title">批量扫描模式</string>
    <string name="preferences_copy_to_clipboard_title">复制到剪贴板</string>
    <string name="preferences_custom_product_search_summary" formatted="false">替换：％s=内容，％f=格式，％t=类型</string>
    <string name="preferences_custom_product_search_title">自定义搜索网址</string>
    <string name="preferences_decode_1D_industrial_title">一维码：工业</string>
    <string name="preferences_decode_1D_product_title">一维码：商品</string>
    <string name="preferences_decode_Aztec_title">Aztec</string>
    <string name="preferences_decode_Data_Matrix_title">Data Matrix</string>
    <string name="preferences_decode_PDF417_title">PDF417 (测试)</string>
    <string name="preferences_decode_QR_title">二维码</string>
    <string name="preferences_device_bug_workarounds_title">设备适配</string>
    <string name="preferences_disable_barcode_scene_mode_title">不进行条形码场景匹配</string>
    <string name="preferences_disable_continuous_focus_summary">使用标准对焦模式</string>
    <string name="preferences_disable_continuous_focus_title">不持续对焦</string>
    <string name="preferences_disable_exposure_title">不曝光</string>
    <string name="preferences_disable_metering_title">不使用距离测量</string>
    <string name="preferences_front_light_auto">自动</string>
    <string name="preferences_front_light_off">关</string>
    <string name="preferences_front_light_on">开</string>
    <string name="preferences_front_light_summary">设置闪光灯模式</string>
    <string name="preferences_front_light_title">闪光灯</string>
    <string name="preferences_general_title">扫描设置</string>
    <string name="preferences_history_summary">自动将条码存入历史记录</string>
    <string name="preferences_history_title">存入历史记录</string>
    <string name="preferences_invert_scan_summary">扫描黑色背景上的白色条码。仅适用于部分设备。</string>
    <string name="preferences_invert_scan_title">反色</string>
    <string name="preferences_orientation_title">不自动旋转</string>
    <string name="preferences_play_beep_title">播放提示音</string>
    <string name="preferences_remember_duplicates_summary">在历史记录中保存重复的记录</string>
    <string name="preferences_remember_duplicates_title">保存重复记录</string>
    <string name="preferences_result_title">搜索设置</string>
    <string name="preferences_scanning_title">条码类型</string>
    <string name="preferences_search_country">搜索引擎国别</string>
    <string name="preferences_supplemental_summary">尝试检索关于条码内容的更多信息</string>
    <string name="preferences_supplemental_title">检索更多信息</string>
    <string name="preferences_vibrate_title">振动</string>
    <string name="result_address_book">找到联系人信息</string>
    <string name="result_calendar">找到日程</string>
    <string name="result_email_address">找到电子邮件地址</string>
    <string name="result_geo">找到地理坐标</string>
    <string name="result_isbn">找到图书</string>
    <string name="result_product">找到商品</string>
    <string name="result_sms">找到短信号码</string>
    <string name="result_tel">找到电话号码</string>
    <string name="result_text">找到纯文本</string>
    <string name="result_uri">找到 URL </string>
    <string name="result_wifi">找到 Wi-Fi 配置</string>
    <string name="wifi_changing_network">连接到 Wi-Fi \u2026</string>
    <string name="tiao_text">将条形码放入框内, 即可自动扫描</string>
    <string name="scan_text">将取景框对准二维码，即可自动扫描</string>
    <string name="open_camera">请前往设置页面打开使用相机的权限</string>
    <string name="open_camera_audio">请前往设置页面打开使用相机和录音的权限</string>
    <string name="open_external_storage">请前往设置页面打开读取文件的权限</string>
    <string name="open_record_audio">请前往设置页面打开录音的权限</string>
    <string name="open_call_phone">请前往设置页面打开拨打电话的权限</string>
    <string name="open_locatioin">请前往设置页面打开定位的权限和定位服务</string>
    <string name="open_getdevice">请前往设置页面打开读取本机识别码的权限</string>
    <string name="open_read_contacts">请前往设置页面打开获取联系人的权限</string>
    <string name="kindly_reminder">温馨提示</string>
    <string name="system_crash">系统出现错误,请重新登录</string>
    <string name="no_search_data">没有搜索结果，换个关键词吧</string>
    <string name="nullcontent">这里还没有内容哦~</string>
    <string name="nullcontact">你还没有添加好友哦~</string>
    <string name="nullcomment">你还没有收到消息</string>
    <string name="nullselectmems">暂无可选联系人</string>
    <string name="nulldevelop">程序员小哥正在努力建设中敬请期待</string>
    <string name="content_delete">该作业已被删除</string>
    <string name="invalid_qrcode">无效的二维码，请尝试正确的二维码或返回重试</string>
    <string name="expand_string">展开全部</string>
    <string name="collapsed_string">收起</string>
    <string name="input_six_verify_code">请输入6位验证码</string>
    <string name="common_cancel">取消</string>
    <string name="common_accept_msg">取消</string>
    <string name="common_refuse_msg">拒绝</string>
    <string name="common_acceptnoremind_msg">拒绝</string>
    <string name="common_close_see">拒绝</string>
    <string name="common_save_pic">保存图片</string>
    <string name="listview_header_hint_normal">下拉刷新</string>
    <string name="listview_header_hint_release">释放立即刷新</string>
    <string name="listview_loading">正在加载...</string>
    <string name="nomore_loading">没有了</string>
    <string name="refreshing">正在刷新...</string>
    <string name="refresh_done">刷新完成</string>
    <string name="loading_done">加载完成</string>
    <string name="listview_header_last_time">上次更新时间：</string>
    <string name="chat_press_talk">按住说话</string>
    <string name="chat_release_send">松开结束</string>
    <string name="chat_image">照片</string>
    <string name="chat_file">文件</string>
    <string name="chat_photo">拍摄</string>
    <string name="chat_video">小视频</string>
    <string name="chat_audio_too_short">录音过短，请重试</string>
    <string name="chat_resend">重新发送</string>
    <string name="chat_save">保存</string>
    <string name="chat_file_too_large">文件过大，发送失败</string>
    <string name="chat_file_not_exist">文件不存在，发送失败</string>
    <string name="chat_image_preview_title">图片预览</string>
    <string name="chat_send">发送</string>
    <string name="chat_image_preview_load_err">图片加载失败</string>
    <string name="chat_image_preview_ori">原图发送</string>
    <string name="conversation_draft">[草稿]</string>
    <string name="conversation_atmsg">[有人@我]</string>
    <string name="me_invite_who_into_group">我邀请%1$s加入群</string>
    <string name="who_invite_me_into_group">%1$s邀请我加入群</string>
    <string name="who_invite_who_into_group">%1$s邀请%2$s加入群</string>
    <string name="me_apply_into_group">我申请加群%1$s</string>
    <string name="who_apply_who_into_group">%1$s申请加群%2$s</string>
    <string name="conversation_system_group">群组消息</string>
    <string name="group_admin_change">管理员变更</string>
    <string name="group_info_change">群资料变更</string>
    <string name="group_mem_add">已进入群聊</string>
    <string name="group_mem_quit">退出群聊</string>
    <string name="group_mem_kick">已离开群聊</string>
    <string name="group_mem_modify">资料变更</string>
    <string name="msg_summary_image">[图片]</string>
    <string name="msg_summary_voice">[语音]</string>
    <string name="msg_summary_video">[小视频]</string>
    <string name="msg_summary_file">[文件]</string>
    <string name="card">名片</string>
    <string name="clearmsg">清除聊天记录</string>
    <string name="set_chat_bg">设置当前聊天背景</string>
    <string name="top_chat">置顶聊天</string>
    <string name="clear">清空</string>
    <string name="disconnected">未连接</string>
    <string name="main_chat_typing">对方正在输入…</string>
    <string name="main_chat_content_bad">内容含有敏感词</string>
    <string name="main_chat_content_shut">因被禁言而不能发送消息</string>
    <string name="choose_at_person">选择提醒的人</string>
    <string name="detail_information">详细信息</string>
    <string name="send_message">发消息</string>
    <string name="delete">删除</string>
    <string name="add_to_contacts">添加到通讯录</string>
    <string name="main_add_detail_message">附加信息</string>
    <string name="main_add_friend_succeed">请求已发送</string>
    <string name="main_add_friend_added">已添加好友</string>
    <string name="refuse">拒绝</string>
    <string name="pass">通过验证</string>
    <string name="main_add_friend_refuse_all">对方拒绝添加任何人为好友</string>
    <string name="main_add_friend_to_blacklist">我在对方的黑名单中</string>
    <string name="main_add_friend_error">添加好友失败，请稍后重试</string>
    <string name="main_add_friend_del_black_list">添加失败，该用户在你的黑名单中，是否将该用户从黑名单中移除（你需要在移除成功后重发添加好友请求）</string>
    <string name="main_add_friend_del_black_err">移出黑名单失败</string>
    <string name="main_add_friend_del_black_succ">移出黑名单成功</string>
    <string name="main_contact">通讯录</string>
    <string name="main_exuecloud_contact">e学云通讯录</string>
    <string name="main_groupmems">群成员</string>
    <string name="main_gagmems">禁言成员</string>
    <string name="setting_silent">设置禁言</string>
    <string name="search">搜索</string>
    <string name="new_friend">新的朋友</string>
    <string name="class_group">班级群聊</string>
    <string name="exue_id_or_phone">e学云ID号/手机号</string>
    <string name="my_exue_id">我的e学云ID号：%1$s</string>
    <string name="scan_qrcode">扫一扫</string>
    <string name="scan_qrcode_card">扫描二维码名片</string>
    <string name="add_invent_friend">添加e学云中的好友</string>
    <string name="add_friend">添加好友</string>
    <string name="main_newfri_accept">接受</string>
    <string name="main_newfri_has_accept">已接受</string>
    <string name="main_newfri_wait">等待验证</string>
    <string name="please_input">输入内容</string>
</resources>