<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="bottom"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@mipmap/common_white_bg"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@mipmap/common_line" />

        <Button
            android:id="@+id/btn_keep"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/common_item_selector_color"
            android:gravity="center"
            android:text="@string/common_save_pic"
            android:textColor="@color/common_myself_word"
            android:textSize="18sp" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@mipmap/common_line" />

        <Button
            android:id="@+id/btn_shutdown"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/common_item_selector_color"
            android:gravity="center"
            android:text="@string/common_close_see"
            android:textColor="@color/common_myself_word"
            android:textSize="18sp" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@mipmap/common_line" />

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/common_item_selector_color"
            android:gravity="center"
            android:text="@string/common_cancel"
            android:textColor="@color/common_main_color"
            android:textSize="18sp" />
    </LinearLayout>

</LinearLayout>
