<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/line"
        android:focusable="true"
        android:focusableInTouchMode="true" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/ll_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:background="@color/white"
            android:orientation="horizontal"
            android:paddingBottom="8dp"
            android:paddingTop="8dp">

            <ImageButton
                android:id="@+id/btn_voice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:background="@drawable/selector_keyboard_yuyin" />

            <ImageButton
                android:id="@+id/btn_keyboard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:background="@drawable/selector_keyboard_jianpan"
                android:visibility="gone" />

            <TextView
                android:id="@+id/voice_panel"
                android:layout_width="0dp"
                android:layout_height="35dp"
                android:layout_weight="1"
                android:background="@drawable/btn_voice_normal"
                android:clickable="true"
                android:gravity="center"
                android:text="@string/chat_press_talk"
                android:textColor="@color/text_gray1"
                android:textSize="16sp"
                android:visibility="gone" />

            <LinearLayout
                android:id="@+id/text_panel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <com.juziwl.uilibrary.edittext.EmojiFilterEditText
                    android:id="@+id/input"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@null"
                    android:hint="@string/please_input"
                    android:maxLength="1200"
                    android:maxLines="5"
                    android:minHeight="35dp"
                    android:textCursorDrawable="@null"
                    android:textSize="16sp" />
            </LinearLayout>

            <ImageButton
                android:id="@+id/btnEmoticon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="15dp"
                android:background="@drawable/selector_keyboard_face" />

            <ImageButton
                android:id="@+id/btn_add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:background="@drawable/selector_keyboard_add" />

            <Button
                android:id="@+id/btn_send"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="7dp"
                android:layout_marginRight="4dp"
                android:background="@drawable/selector_sendmsg_par"
                android:minHeight="30dp"
                android:minWidth="44dp"
                android:text="@string/chat_send"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:visibility="visible" />
        </LinearLayout>


        <TextView
            android:id="@+id/view_hide"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/ll_input"
            android:layout_alignTop="@id/ll_input"
            android:background="@color/transparent"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:gravity="center"
            android:textColor="@color/common_333333"
            android:textSize="16sp"
            android:visibility="gone" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/morePanel"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@color/white"
        android:orientation="vertical"
        android:visibility="gone">

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/line" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp">

            <LinearLayout
                android:id="@+id/btn_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="35dp"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/unselect_pics" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="7.5dp"
                    android:text="@string/chat_image"
                    android:textColor="@color/text_gray1" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/btn_video"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="35dp"
                android:layout_toRightOf="@id/btn_image"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/unselect_video" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="7.5dp"
                    android:text="@string/chat_photo"
                    android:textColor="@color/text_gray1" />
            </LinearLayout>

        </RelativeLayout>

    </LinearLayout>

    <com.juziwl.uilibrary.emoji.ExpressionView
        android:id="@+id/emoticonPanel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:visibility="gone" />

</LinearLayout>